/*
 * Copyright 2025 Signal Messenger, LLC
 * SPDX-License-Identifier: AGPL-3.0-only
 */

syntax = "proto3";

option java_package = "org.whispersystems.textsecuregcm.grpc.net";
option java_outer_classname = "NoiseTunnelProtos";

message HandshakeInit {
  string user_agent = 1;

  // An Accept-Language as described in
  // https://httpwg.org/specs/rfc9110.html#field.accept-language
  string accept_language = 2;

  // A UUID serialized as 16 bytes (big end first). Must be unset (empty) for an
  // unauthenticated handshake
  bytes aci = 3;

  // The deviceId, 0 < deviceId < 128. Must be unset for an unauthenticated
  // handshake
  uint32 device_id = 4;

  // The first bytes of the application request byte stream, may contain less
  // than a full request
  bytes fast_open_request = 5;
}

message HandshakeResponse {
  enum Code {
    UNSPECIFIED = 0;

    // The noise session may be used to send application layer requests
    OK = 1;

    // The provided client static key did not match the registered public key
    // for the provided aci/deviceId.
    WRONG_PUBLIC_KEY = 2;

    // The client version is to old, it should be upgraded before retrying
    DEPRECATED = 3;
  }

  // The handshake outcome
  Code code = 1;

  // Additional information about an error status, for debugging only
  string error_details = 2;

  // An optional response to a fast_open_request provided in the HandshakeInit.
  // Note that a response may not be present even if a fast_open_request was
  // present. If so, the response will be returned in a later message.
  bytes fast_open_response = 3;
}
